# logical-expression-parser-rust

./: Cargo.toml  input.txt  makefile  readme.md
src/: grammar.pest  lib.rs  main.rs
tests/: function_test.rs  grammar_test.rs
