[package]
name = "logical_expression_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "This is a simple logical expression parser written in Rust using pest library"

[dependencies]
lazy_static = "1.4.0"
pest = "2.7.5"
pest_derive = "2.7.5"